--- a/src/components/Sponsors.css
+++ b/src/components/Sponsors.css
@@ -13,3 +13,14 @@
     background-color: rgb(193, 36, 193); /* Purple color */
     margin-left: 16px;
 }
+
+/* Sponsors.css */
+.font-style {
+    font-weight: 600;
+}
+
+.font-style1 {
+    font-weight: 400;
+}
+  
+  
